fix some minor layout issue

--- a/src/components/QuestionPage/QuestionPage.scss
+++ b/src/components/QuestionPage/QuestionPage.scss
@@ -47,37 +47,40 @@
     margin: 0;
 	position: relative;
 	min-height: 100vh;
-	// border: 1px solid black;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	font-family: "Yekan Bakh";
 	direction: rtl;
-    padding: 0 30px;
     
     header {
         display: flex;
-        width: 100%;
-        height: fit-content;
+		width: 100%;
+
         direction: ltr;
     }
 
 
 	.question-page-main--title {
+		width: 100%;
 		font-size: 30px;
 		font-weight: bold;
 		text-align: right;
 		text-justify: newspaper;
 		display: flex;
 		align-items: center;
-        height: 150px;
-        color: white;
+		justify-content: center;
+        height: 100px;
+		color: white;
+		p {
+		 font-size: 80%;
+		}
 	}
 
 	.main {
 		// margin-top: 100px;
 		width: 100%;
-		padding-bottom: 150px;
+		// padding-bottom: 150px;
 	}
 	.question-page-main {
 		display: flex;
@@ -87,6 +90,7 @@
 	}
     
 	.question-page-main--options {
+		height: fit-content;
         width: 100%;
 	}
 
@@ -101,7 +105,7 @@
 		min-width: 60px;
 		height: fit-content;
 		background: #df5e88;
-		font-size: 25px;
+		font-size: 1.5rem;
 		font-weight: bold;
         color: white;
         outline: none;
@@ -116,10 +120,9 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		// align-items: space-between;
 		bottom: 0;
 		width: 100%;
-        height: 150px;
+        height: 130px;
         color: #e3e3e3;
     }
     
@@ -131,7 +134,7 @@
         height: 100%;
         img {
             width: 100px;
-            height: 50px;
+            height: 40px;
         }
     }
 	.question-page-footer {
@@ -141,7 +144,7 @@
 		align-items: center;
 		bottom: 0;
 		width: 100%;
-		height: 100px;
+		height: 90px;
 	}
 
 	.footer-header {
